# pacboost

./: .SRCINFO  .SRCINFO-bin  .SRCINFO_CHECK  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PATCHNOTES.md  PKGBUILD  PKGBUILD-bin  README.md  bench.sh  bench_multi.sh  install-beta.sh  install.sh  patchnotes.md
.github/workflows/: ci.yml  release.yml
src/: alpm_manager.rs  config.rs  downloader.rs  error.rs  logging.rs  main.rs  reflector.rs  updater.rs
src/appimage/: mod.rs
src/aur/: builder.rs  client.rs  mod.rs  pkgbuild.rs  resolver.rs
src/containers/: mod.rs
src/downloader/: benchmark.rs  cache.rs  engine.rs  mirror.rs  mod.rs  scheduler.rs  segment.rs  turbo.rs
src/flatpak/: mod.rs  remote.rs
src/rollback/: mod.rs
src/security/: cve.rs  malware.rs  mod.rs  sandbox.rs  trust.rs
src/snap/: mod.rs  store.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs  widgets.rs
