[package]
name = "pacboost"
version = "1.2.0"
edition = "2021"

[dependencies]
alpm = "4.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
futures = "0.3"
url = "2.5"
ureq = { version = "2.9", features = ["json"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
flate2 = "1.1.5"
libc = "0.2.178"
